--- a/THP clone google/index.html
+++ b/THP clone google/index.html
@@ -4,7 +4,7 @@
             <meta charset="utf-8" />
             <title>Google</title>
             <link rel="stylesheet" type="text/css" href="style.css">
-            <link rel="shortcut icon" type=".image/ico" href="../Documents/favicon.ico"/>
+            <link rel="shortcut icon" type=".image/ico" href="img/favicon.ico"/>
     </head>
 
     <body>
@@ -14,13 +14,12 @@
                 <nav class="header border-flex">
                     <div class="bloc1"><a href="#">Gmail</a></div>
                     <div class="bloc1"><a href="#">Images</a></div>
-                    <div class="bloc1"><a href="#"><img src="img/th.png"></a></div>
                     <div class="bloc1"><a href="#"><button class="white">Connexion</button></a></div>
                 </nav>
             </header>
 
             <section class="border-flex">
-                <div class="bloc2"><img src="../Documents/google.png" alt="logo google"></div>
+                <div class="bloc2"><img src="img/google.png" alt="logo google"></div>
                 <div class="bloc2"><input type="text"></div>
                 <div class="bloc2"><button>Recherche Google</button><button>J'ai de la chance</button></div>
             </section>
